added board function.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe 20x20</title>
+    <title>Tic Tac Toe 20x20 - MediaGame</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Tic Tac Toe 20x20 - MediaGame</h1>
-    
+    <!-- <h1>Tic Tac Toe 20x20 - MediaGame</h1> -->
+    <div id="game-container">
+        <div id="info-panel">
+            <div id="current-player">Joueur actuel : X</div>
+            <div id="score">Score : X (0) - O (0)</div>
+            
+        </div>
+        <div id="board"></div>
+        <div class="button-container">
+            <button id="restart">Restart Game</button>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
