added responsivity to game.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
           <img src="logo.jpg" alt="MediaGame" />
         </div>
 
-        <ul>
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="about.html">A propos</a></li>
-          <li><a href="conditions.html">Conditions d'utilisation</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <!-- Hamburger Menu Button -->
+        <button class="menu-toggle" aria-label="Toggle Menu">
+            &#9776;
+        </button>
+
+        <ul class="menu">
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="about.html">A propos</a></li>
+            <li><a href="conditions.html">Conditions d'utilisation</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
       </nav>
     </header>
 
@@ -36,7 +41,7 @@
         </div>
 
         <div class="scoreboard-section">
-          <h3>Score</h3>
+          <h3>Score :</h3>
           <table class="scoreboard">
             <tr>
               <th>Joueur X</th>
@@ -54,9 +59,7 @@
 
     <!-- Footer -->
     <footer>
-      <div class="footer-content">
         <p>&copy; 2024 Tic-Tac-Toe Game. All rights reserved.</p>
-      </div>
     </footer>
 
     <script src="index.js"></script>
