update folders structure.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe 20x20 - MediaGame</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <!-- <h1>Tic Tac Toe 20x20 - MediaGame</h1> -->
     <header>
       <nav>
         <div class="logo">
-          <img src="logo.jpg" alt="MediaGame" />
+          <img src="/assets/images/logo.jpg" alt="MediaGame" />
         </div>
 
         <!-- Hamburger Menu Button -->
@@ -62,6 +61,6 @@
         <p>&copy; 2024 Tic-Tac-Toe Game. All rights reserved.</p>
     </footer>
 
-    <script src="index.js"></script>
+    <script src="assets/css/index.js"></script>
   </body>
 </html>
