added InfoDev Board size and wincondition logique.

--- a/main.html
+++ b/main.html
@@ -28,7 +28,9 @@
     </header>
 
     <main id="game-container">
-      <div id="board"></div>
+      <!-- Game Board -->
+       <div id="board"></div>
+       
       <!-- Info Panel -->
       <div id="info-panel">
         <h2>Informations du jeu</h2>
